get overflow correct

--- a/client/main.scss
+++ b/client/main.scss
@@ -72,4 +72,5 @@ main {
 	display: flex;
 	justify-content: space-between;
 	overflow-x: auto;
+	overflow-y: hidden;
 }
