--- a/imports/templates/lists/list.scss
+++ b/imports/templates/lists/list.scss
@@ -5,6 +5,7 @@
 	//writing-mode: vertical-rl;
 	box-sizing: border-box;
 	display: flex;
+	overflow: hidden;
 	flex-direction: column;
 
 	.header {
